added screenShot for ReadMe

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
 
-    <div class="mainHeader">
+    <div class="mainHeader jumbotron">
         <h1 class="text-center" id="header-title">CRYSTAL COLLECTOR</h1>
         <h2 class="text-center">RULES EXPLANATION HERE</h2>
     </div>
@@ -29,7 +29,18 @@
 
         <div class="row">
 
-            <div>
+
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Reach this number: </h3>
+  </div>
+  <div class="panel-body">
+    <span id="computer-pick"></span>
+  </div>
+</div>
+
+     <div>
                 <div>
                     <h3>Reach this number: </h3>
                 </div>
