added rules explanation on home page, updated ReadMe

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="mainHeader jumbotron">
         <h1 class="text-center" id="header-title">CRYSTAL COLLECTOR</h1>
-        <h2 class="text-center">RULES EXPLANATION HERE</h2>
+        <h2 class="text-center">Collect Crystals of different values to 'EXACTLY' match your goal!</h2>
     </div>
 
     <div class="container">
